2008-04-29  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm ($HTMLBrowsingContextNameAttrChecker): New checker.
	($HTMLTargetAttrChecker): |_blank| is now allowed and
	an empty string is no longer allowed (HTML5 revision 1470).
	(object/@name, iframe/@name): Added (HTML5 revision 1470).

2008-04-13  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: |xmlns| attribute is now a global attribute (HTML5
	revision 1426).

2008-04-12  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: Support for HTML custom data attributes (HTML5
	revision 1399).

2008-03-28  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: s/Prose/Flow/g (HTML5 revision 1261).

2008-03-23  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: @datetime microsyntax is in the First Draft phase.

2008-03-22  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: link/@rev and a/@rev are implemented.

2008-03-22  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: link/@target, img/@align, img/@border, img/@hspace,
	img/@vspace, img/@longdesc, object/@align, object/@archive,
	object/@border, object/@classid, object/@codebase, 
	object/@codetype, object/@declare, object/@hspace,
	object/@standby, object/@vspace, param/@valuetype,
	param/@type, area/@nohref, %cellhalign/@align, %cellhalign/@char,
	and %cellvalign/@valign are implemented.

2008-03-22  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: tr/@bgcolor, td/@bgcolor, th/@bgcolor, td/@abbr,
	th/@abbr, td/@axis, th/@axis, td/@scope, td/@nowrap,
	th/@nowrap, caption/@align , table/@frame, table/@rules,
	table/@summary, and table/@width are implemented.

2008-03-22  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: body/@alink, body/@background, body/@bgcolor,
	body/@link, body/@text, body/@vlink, hn/@align, p/@align,
	br/@clear, pre/@width, ol/@compact, ul/@compact,
	dl/@compact, dl/@compact, menu/@compact, and div/@align implemented.

2008-03-22  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: Typo fixed.  html/@version implemented (as do-nothing
	checker). head/@profile implemented.  meta/@scheme implemented (as