@@ -3847,14 +3847,12 @@ wormhole connection.</mark></p>
 </p>
 #errors
 /p/dfn/dfn;element not allowed:minus;m
-/p/dfn/dfn;duplicate term
 
 #data
 <p xmlns="http://www.w3.org/1999/xhtml">
 <dfn></dfn><dfn/>
 </p>
 #errors
-/p/dfn;duplicate term
 /p;no significant content;s
 /p/dfn;no significant content;s
 /p/dfn;no significant content;s
@@ -3865,7 +3863,6 @@ wormhole connection.</mark></p>
 </p>
 #errors
 /p/dfn/em/dfn;element not allowed:minus;m
-/p/dfn/em/dfn;duplicate term
 /p;no significant content;s
 /p/dfn;no significant content;s
 /p/dfn/em;no significant content;s
