@@ -20,7 +20,6 @@
   <dfn></dfn>
 </p>
 #errors
-/p/dfn;duplicate term
 /p;no significant content;s
 /p/dfn;no significant content;s
 /p/dfn;no significant content;s
@@ -62,7 +61,6 @@
   <dfn>a</dfn>
 </p>
 #errors
-/p/dfn;duplicate term
 
 #data
 <p xmlns="http://www.w3.org/1999/xhtml">
@@ -70,7 +68,6 @@
   <span><dfn>a</dfn></span>
 </p>
 #errors
-/p/span/dfn;duplicate term
 
 #data
 <p xmlns="http://www.w3.org/1999/xhtml">
@@ -78,7 +75,6 @@
   <dfn title="a">b</dfn>
 </p>
 #errors
-/p/dfn;duplicate term
 
 #data
 <p xmlns="http://www.w3.org/1999/xhtml">
@@ -93,7 +89,6 @@
 </p>
 #errors
 /p/dfn/dfn;element not allowed:minus;m
-/p/dfn/dfn;duplicate term
 
 #data
 <p xmlns="http://www.w3.org/1999/xhtml">
@@ -101,7 +96,6 @@
 </p>
 #errors
 /p/dfn/dfn;element not allowed:minus;m
-/p/dfn/dfn;duplicate term
 /p;no significant content;s
 /p/dfn;no significant content;s
 /p/dfn/dfn;no significant content;s
@@ -118,7 +112,6 @@
   <dfn><abbr>a</abbr></dfn>
 </p>
 #errors
-/p/dfn;duplicate term
 
 #data
 <p xmlns="http://www.w3.org/1999/xhtml">
@@ -133,7 +126,6 @@
   <dfn><abbr title="a">b</abbr></dfn>
 </p>
 #errors
-/p/dfn;duplicate term
 
 #data
 <p xmlns="http://www.w3.org/1999/xhtml">
@@ -141,7 +133,6 @@
   <dfn title="a"><abbr>b</abbr></dfn>
 </p>
 #errors
-/p/dfn;duplicate term
 
 #data
 <p xmlns="http://www.w3.org/1999/xhtml">
@@ -149,7 +140,6 @@
   <dfn title="a"><abbr title="b">c</abbr></dfn>
 </p>
 #errors
-/p/dfn;duplicate term
 
 #data
 <p xmlns="http://www.w3.org/1999/xhtml">
@@ -164,7 +154,6 @@
   <dfn> <abbr title="a">b</abbr></dfn>
 </p>
 #errors
-/p/dfn;duplicate term
 
 #data
 <p xmlns="http://www.w3.org/1999/xhtml">
@@ -172,7 +161,6 @@
   <dfn><![CDATA[ ]]><abbr title="a">b</abbr></dfn>
 </p>
 #errors
-/p/dfn;duplicate term
 
 #data
 <p xmlns="http://www.w3.org/1999/xhtml">
@@ -197,7 +185,6 @@
   <dfn><span>a</span></dfn>
 </p>
 #errors
-/p/dfn;duplicate term
 
 #data
 <p xmlns="http://www.w3.org/1999/xhtml">
@@ -205,7 +192,6 @@
   <dfn><abbr title="">a</abbr></dfn>
 </p>
 #errors
-/p/dfn;duplicate term
 /p/dfn;no significant content;s
 
 #data
@@ -214,7 +200,6 @@
   <dfn title=""><abbr>a</abbr></dfn>
 </p>
 #errors
-/p/dfn;duplicate term
 /p/dfn;no significant content;s
 
 #data
