@@ -1,7 +1,7 @@
 1..1734
 # Running under perl version 5.008007 for linux
-# Current time local: Tue Apr 29 19:20:38 2008
-# Current time GMT:   Tue Apr 29 10:20:38 2008
+# Current time local: Tue Apr 29 19:58:28 2008
+# Current time GMT:   Tue Apr 29 10:58:28 2008
 # Using Test.pm version 1.25
 ok 1
 ok 2
