@@ -1,7 +1,7 @@
 1..1068
 # Running under perl version 5.008007 for linux
-# Current time local: Tue Apr 29 19:20:39 2008
-# Current time GMT:   Tue Apr 29 10:20:39 2008
+# Current time local: Tue Apr 29 19:58:29 2008
+# Current time GMT:   Tue Apr 29 10:58:29 2008
 # Using Test.pm version 1.25
 # t/tokenizer/test1.test
 ok 1
