@@ -1,7 +1,7 @@
 1..1920
 # Running under perl version 5.008007 for linux
-# Current time local: Tue Apr 29 19:22:12 2008
-# Current time GMT:   Tue Apr 29 10:22:12 2008
+# Current time local: Tue Apr 29 19:58:37 2008
+# Current time GMT:   Tue Apr 29 10:58:37 2008
 # Using Test.pm version 1.25
 # t/tokenizer-test-2.dat
 ok 1
