@@ -1,8 +1,17 @@
 2008-04-29  Wakaba  <wakaba@suika.fam.cx>
 
+	* content-model-4.dat: Terms no longer have to be unique (HTML5
+	revision 1467).
+
+	* content-model-2.dat: Tests for |onstorage| attribute
+	are added (HTML5 revision 1495).  Fix test results
+	for unknown elements and attributes in the HTML namespace.
+
+2008-04-29  Wakaba  <wakaba@suika.fam.cx>
+
 	* content-model-1.dat, content-model-2.dat: Test results
 	related to browsing context name or keyword are revised
-	and added.
+	and added (HTML5 revision 1470 and 1471).
 
 2008-04-13  Wakaba  <wakaba@suika.fam.cx>
 
