@@ -1,8 +1,15 @@
 2008-04-29  Wakaba  <wakaba@suika.fam.cx>
 
+	* HTML.pm: Support for |onstorage| attribute is added (HTML5
+	revision 1495).  Defined terms no longer have to be unique (HTML5
+	revision 1467).
+
+2008-04-29  Wakaba  <wakaba@suika.fam.cx>
+
 	* HTML.pm ($HTMLBrowsingContextNameAttrChecker): New checker.
-	($HTMLTargetAttrChecker): |_blank| is now allowed and
-	an empty string is no longer allowed (HTML5 revision 1470).
+	($HTMLTargetAttrChecker): |_blank| is now allowed (HTML5
+	revision 1471) and an empty string is no longer allowed (HTML5
+	revision 1470).
 	(object/@name, iframe/@name): Added (HTML5 revision 1470).
 
 2008-04-13  Wakaba  <wakaba@suika.fam.cx>
